FIX file input random buginess

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <a href="https://github.com/jonathanlurie/quickgui"><img id="logo" src="images/qv_logo_horizontal.png"/></a>
   <canvas id="renderCanvas"></canvas>
+  <input type="file" id="fileInput" style="display:none"/>
   <div class="staticSliderWrapper">
     <div id="xTranslate" class="staticSlider azure">X translate</div>
     <div id="yTranslate" class="staticSlider azure">Y translate</div>
@@ -16,7 +18,7 @@
   </div>
 
 
-  <script src="../dist/quickgui.js"></script>
+  <script src="../dist/quickgui.min.js"></script>
 
   <script>
 
