--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <a href="https://github.com/jonathanlurie/quickgui"><img id="logo" src="images/qv_logo_horizontal.png"/></a>
+  <div id="logoDiv">
+    <a href="https://github.com/jonathanlurie/quickgui">
+      <img id="logo" src="images/qv_logo_horizontal.png"/>
+      <div class="purple-text">#brainhack2018</div>
+    </a>
+  </div>
+
   <canvas id="renderCanvas"></canvas>
   <input type="file" id="fileInput" style="display:none"/>
   <div class="staticSliderWrapper">
