add link to yt video

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
     <a href="https://github.com/jonathanlurie/quickgui">
       <img id="logo" src="images/qv_logo_horizontal.png"/>
       <div class="purple-text">#brainhack2018 <i class="fab fa-github"></i></div>
+      <div >
+        <p style="margin-bottom:0">
+        <a id="structuralFile"class="filelinks" href="https://github.com/Pixpipe/quickvoxelcore/raw/master/data/structural.nii.gz"><i class="fas fa-download"></i> structural.nii.gz</a>
+        </p>
+        <p style="margin-top:5px">
+        <a id="functionalFile"class="filelinks" href="https://github.com/Pixpipe/quickvoxelcore/raw/master/data/functional.nii.gz"><i class="fas fa-download"></i> functional.nii.gz</a>
+        </p>
+      </div>
     </a>
   </div>
 
@@ -32,6 +40,7 @@
 
     // the foo object is part of our quickgui module
     var qg = new quickgui.Quickgui()
+
 
   </script>
 
